# dc-qiskit-algorithms

./: .gitignore  .readthedocs.yml  .travis.yml  Makefile  README.rst  Readme.md  pyproject.toml  requirements.txt  setup.py
dc_qiskit_algorithms/: ControlledMottonen.py  ControlledStatePreparation.py  DraperAdder.py  FlipFlopQuantumRam.py  MottonenStatePreparation.py  MöttönenStatePrep.py  MöttönenStatePreparation.py  Qft.py  UniformRotation.py  __init__.py  _version.py  draper_adder.py  quantum_fourier_transform.py
doc/: Makefile  conf.py  controlledmottonen.rst  draperadder.rst  flipflipquantumram.rst  flipflopquantumram.rst  index.rst  mottonenstateprep.rst  qft.rst  requirements.txt  uniformrotation.rst
docs/: conf.py  draper_adder.rst  index.rst  möttönenstateprep.rst  requirements.txt  uniform_rotation.rst
qiskit_algorithms/: DraperAdder.py  MöttönenStatePrep.py  Qft.py  UniformRotation.py
tests/: __init__.py  defaults.py  test_ControlledMottonen.py  test_DraperAdder.py  test_FlipFlopQuantumRam.py  test_MottonenStatePrep.py  test_MöttönenStatePrep.py  test_UniformRotation.py  test_draper_adder.py
