[tool.poetry]
name = "dc-qiskit-algorithms"
version = "0.0.14"
description = "General algorithms with qiskit as basis"
repository = "https://github.com/carstenblank/dc-qiskit-algorithms"
authors = [
    "Carsten Blank <blank@data-cybernetics.com>",
    "Sebastian Boerakker <boerakker@data-cybernetics.com>"
]
maintainers = [
    "Carsten Blank <blank@data-cybernetics.com>"
]
documentation = "https://dc-qiskit-algorithms.readthedocs.io/"
readme = "README.rst"
packages = [
    {include = "dc_qiskit_algorithms"}
]
license = 'Apache License 2.0'
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
qiskit = "*"
qiskit-aer = "*"
bitstring = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
matplotlib = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
ddt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"